--- a/styles.css
+++ b/styles.css
@@ -16,8 +16,7 @@ body {
   background-color: #f2f2f2;
   padding: 20px;
   box-sizing: border-box;
-  width: 300px;
-  height: 100%;
+  width: 22%;
   overflow-y: scroll;
 }
 .sidebar #graph-data {
@@ -56,11 +55,13 @@ body {
 }
 
 .content {
-  flex: 1;
+  display: flex;
+  flex-direction: column;
   background-color: #fff;
-  padding: 20px;
+  padding: 10px;
   box-sizing: border-box;
-  overflow: hidden;
+  overflow: scroll;
+  flex: 1 1 0%;
 }
 
 
@@ -210,4 +211,67 @@ textarea {
   width: 100%;
   box-sizing: border-box;
   white-space: wrap;
+}
+
+
+
+
+.circle {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  border: 1px solid black;
+  display: inline-block;
+  cursor: pointer;
+  position: relative;
+}
+.color-picker {
+  opacity: 0;
+  position: absolute;
+  top: 110%;
+  left: 0;
+  cursor: pointer;
+}
+
+
+.row {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+.column {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+
+.color-box {
+  width: 50px;
+  height: 15px;
+  background-color: aqua;
+  margin-left : 10px;
+  border: 2px solid black;
+}
+
+
+.main-chart{
+  flex: 1 1 0%;
+  padding: 10px;
+}
+
+.projection-chart{
+ 
+  height: 50%;
+  padding: 10px;
+}
+
+.twoChart-resizer {
+  font-size: .1px;
+  display: block;
+  height: 10px;
+  background-color: rgba(218, 216, 216, 0.727);
+  cursor: s-resize;
 }
