--- a/styles.css
+++ b/styles.css
@@ -251,7 +251,7 @@ textarea {
 .color-box {
   width: 50px;
   height: 15px;
-  background-color: aqua;
+  background-color: #325296;
   margin-left : 10px;
   border: 2px solid black;
 }
